@@ -56,7 +56,6 @@ struct alloc_stats {
   uint64_t minor_words;
   uint64_t promoted_words;
   uint64_t major_words;
-  uint64_t minor_collections;
   uint64_t forced_major_collections;
 };
 void caml_accum_alloc_stats(
