@@ -108,6 +108,9 @@ Working version
 - #12121: unrooted implementations of caml_callback*_exn
   (Gabriel Scherer, review by KC Sivaramakrishnan and Xavier Leroy)
 
+- #12132: Fix overcounting of minor collections in GC stats.
+  (Damien Doligez, review by Gabriel Scherer)
+
 ### Type system:
 
 - #6941, #11187: prohibit using classes through recursive modules
